--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ bottom : 0 ;
 
 .top-img {
   position: relative;
-  background: linear-gradient(to bottom, rgba(255,255,255,0.1), rgba(0,0,0,0.7));
+  background: linear-gradient(to bottom, rgba(255,255,255,0), rgba(0,0,0,0.7));
 }
 
 img.top-img-pic{
@@ -93,14 +93,47 @@ img.top-img-pic{
  top: 50%;
  left: 5%;
 }
-
-.slides img{
-  sbackground: #0099f7; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #0099f7, #f11712); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #0099f7, #f11712); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+.search-head {
+  margin-left: 1.5%;
 }
-.slider img{
-  filter: brightness(0.7);
+
+.slide-gradation1{
+  background: #0099f7; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, rgba(0,153,247,0.4), rgba(241,23,18,0.4)); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, rgba(0,153,247,0.4), rgba(241,23,18,0.4)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+.slide-gradation2{
+  background: #0099f7; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, rgba(11,72,103,0.4), rgba(245,98,23,0.4)); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, rgba(11,72,103,0.4), rgba(245,98,23,0.4)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+.slide-gradation3{
+  background: #0099f7; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, rgba(0,79,249,0.4), rgba(255,249,76,0.4)); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, rgba(0,79,249,0.4), rgba(255,249,76,0.4)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+
+.caption {
+  z-index: 2;
+}
+.slider {
+  position: relative;
+}
+.slides img {
+  z-index: -1;
 
 }
 .slider h3 h5{
@@ -118,6 +151,10 @@ img.top-img-pic{
 .card-title{
   text-shadow: 0 0 5px black;
 }
+.search-form {
+background: #eeeeee;  /* fallback for old browsers */
+}
+
 
 
 .page-footer {
